# voicemeeter-sdk-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  release.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/workflows/: ci.yml  gh-pages.yml
codegen/: Cargo.toml
codegen/src/: codegen.rs  lib.rs
examples/: drop.rs  output.rs  parametric_eq.rs  raw_callback.rs  simple.rs  test.rs  test_raw.rs
examples/sync-a1/: Cargo.toml  README.md
examples/sync-a1/src/: main.rs
implementors/alloc/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sized.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
miri/: Cargo.toml  build.rs
miri/src/: lib.rs
sdk/: VoicemeeterRemote.h
src/: bindings.rs  codegen.rs  interface.rs  lib.rs  types.rs
src/ffi/: split.rs
src/interface/: callback.rs  communication_login_logout.rs  device.rs  general_information.rs  get_levels.rs  get_parameters.rs  macro_buttons.rs  parameters.rs  set_parameters.rs
src/interface/callback/: commands.rs  data.rs  register.rs  start_stop.rs
src/interface/parameters/: bus.rs  eq.rs  errors.rs  fx.rs  get_parameters.rs  option.rs  recorder.rs  set_parameters.rs  strip.rs  vban.rs
src/voicemeeter/: bindings.rs.html  interface.rs.html  lib.rs.html  types.rs.html
src/voicemeeter/interface/: callback.rs.html  communication_login_logout.rs.html  device.rs.html  general_information.rs.html  get_levels.rs.html  get_parameters.rs.html  macro_buttons.rs.html  parameters.rs.html  set_parameters.rs.html
src/xtask/: main.rs.html
trait.impl/core/borrow/: trait.Borrow.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sized.js  trait.Sync.js  (+2 more)
voicemeeter/: all.html  enum.CallbackCommand.html  enum.DeviceBuffer.html  enum.LoadError.html  enum.RegistryError.html  enum.RemoteFileError.html  index.html  sidebar-items.js  static.VOICEMEETER_REMOTE.html  struct.VoicemeeterRemote.html
voicemeeter-sys/: Cargo.toml
voicemeeter-sys/src/: bindings.rs  codegen.rs  lib.rs  tests.rs
voicemeeter/bindings/: constant.VBVMR_RESULT_OK.html  constant.expected_size_T_VBAN_VMRT_PACKET.html  index.html  sidebar-items.js  struct.VBVMR_AUDIOCALLBACK.html  struct.VBVMR_CBCOMMAND.html  struct.VBVMR_DEVTYPE.html  struct.VBVMR_MACROBUTTON_MODE.html  struct.VMRTSTATE_MODE.html  struct.VoicemeeterRemoteRaw.html  struct.tagVBAN_VMRT_PACKET.html  struct.tagVBVMR_AUDIOBUFFER.html  struct.tagVBVMR_AUDIOINFO.html  struct.tagVBVMR_INTERFACE.html  type.LPT_VBAN_VMRT_PACKET.html  type.LPT_VBVMR_INTERFACE.html  type.PT_VBAN_VMRT_PACKET.html  type.PT_VBVMR_INTERFACE.html  type.T_VBAN_VMRT_PACKET.html  type.T_VBVMR_AudioCallbackRegister.html  type.T_VBVMR_AudioCallbackStart.html  type.T_VBVMR_AudioCallbackStop.html  type.T_VBVMR_AudioCallbackUnregister.html  type.T_VBVMR_GetLevel.html  type.T_VBVMR_GetMidiMessage.html  type.T_VBVMR_GetParameterFloat.html  type.T_VBVMR_GetParameterStringA.html  type.T_VBVMR_GetParameterStringW.html  type.T_VBVMR_GetVoicemeeterType.html  type.T_VBVMR_GetVoicemeeterVersion.html  type.T_VBVMR_INTERFACE.html  type.T_VBVMR_Input_GetDeviceDescA.html  type.T_VBVMR_Input_GetDeviceDescW.html  type.T_VBVMR_Input_GetDeviceNumber.html  type.T_VBVMR_IsParametersDirty.html  type.T_VBVMR_Login.html  type.T_VBVMR_Logout.html  type.T_VBVMR_MacroButton_GetStatus.html  type.T_VBVMR_MacroButton_IsDirty.html  type.T_VBVMR_MacroButton_SetStatus.html  (+16 more)
voicemeeter/interface/: enum.InitializationError.html  index.html  sidebar-items.js  struct.VoicemeeterRemote.html
voicemeeter/types/: enum.BusMode.html  enum.Channel.html  enum.Device.html  enum.LevelType.html  enum.VoicemeeterApplication.html  index.html  sidebar-items.js  struct.ChannelIndex.html  struct.LogicalButton.html  struct.Parameter.html  struct.ParameterName.html  struct.ParameterNameRef.html  struct.ParameterRef.html  struct.ZIndex.html
xtask/: Cargo.toml  all.html  enum.Args.html  fn.get_cargo_workspace.html  fn.main.html  fn.pkgid.html  index.html  sidebar-items.js
xtask/src/: main.rs
(+191 files in other folders)
