[package]
name = "voicemeeter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FFI bindings to Voicemeeter SDK"

[dependencies]
libc = "0.2"
winreg = "0.10"
thiserror = "1.0.30"
libloading = "0.7.3"
once_cell = "1.9.0"
aliri_braid = "0.1.10"
bytemuck = "1.7.3"
tracing = "0.1.31"

[dev-dependencies]
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
eyre = { version = "0.6" }
pretty_assertions = "1.1.0"
tracing-subscriber = {version = "0.3.9", features = ["env-filter"]}
ctrlc = "3"
tracing-error = "0.2.0"

[workspace]
members = [".", "codegen"]

[patch.crates-io]
bindgen = { git = "https://github.com/Emilgardis/rust-bindgen", branch = "dynamic-comments" }

[profile.dev.package.diff]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3