[package]
name = "voicemeeter"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["voicemeeter", "ffi", "audio", "windows"]
repository = "https://github.com/Emilgardis/voicemeeter-sdk-rs"
description = "FFI bindings to Voicemeeter SDK"

[dependencies]
libc = "0.2"
winreg = "0.10"
thiserror = "1.0.30"
libloading = "0.7.3"
once_cell = "1.9.0"
aliri_braid = "0.1.10"
bytemuck = "1.7.3"
tracing = "0.1.31"

[dev-dependencies]
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
eyre = { version = "0.6" }
pretty_assertions = "1.1.0"
tracing-subscriber = {version = "0.3.9", features = ["env-filter"]}
ctrlc = "3"
tracing-error = "0.2.0"
fundsp = {version = "0.3.2", features = ["hacker_32"]}

[features]
default = ["interface"]

interface = []

[workspace]
members = [".", "codegen"]

[patch.crates-io]
bindgen = { git = "https://github.com/Emilgardis/rust-bindgen", branch = "dynamic-comments" }
fundsp  = { git = "https://github.com/Emilgardis/fundsp", branch = "hacker_32" }
#fundsp  = { path = "../fundsp" }


[profile.dev.package.fundsp]
opt-level = 3

[profile.release.package.fundsp]
opt-level = 3

[profile.dev.package.diff]
opt-level = 3

[profile.dev.package.tracing]
opt-level = 3

[profile.dev.package.tracing-core]
opt-level = 3

[profile.dev.package.tracing-log]
opt-level = 3

[profile.dev.package.tracing-error]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true
targets = ["x86_64-pc-windows-msvc"]