[package]
name = "voicemeeter"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["voicemeeter", "ffi", "audio", "windows"]
categories = ["os::windows-apis"]
repository = "https://github.com/Emilgardis/voicemeeter-sdk-rs"
description = "Voicemeeter Remote bindings and abstractions"
include = [
    "src/**/*",
    "/Cargo.toml",
    "/LICENSE*",
    "/README.md",
    "examples/**/*",
]
rust-version = "1.65"

[dependencies]
winreg = "0.51.0"
thiserror = "1.0.30"
libloading = "0.8.0"
once_cell = "1.9.0"
aliri_braid = "0.4.0"
tracing = "0.1.31"

[dev-dependencies]
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
eyre = "0.6.7"
pretty_assertions = "1.1.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
ctrlc = "3"
tracing-error = "0.2.0"
fundsp = "0.4"

[features]
default = ["interface"]

interface = []

[workspace]
default-members = ["."]
members = ["codegen", "miri", "xtask", "examples/sync-a1"]

[workspace.dependencies]
voicemeeter = { path = "." }

[patch.crates-io]
#fundsp  = { path = "../fundsp" }


[profile.dev.package.fundsp]
opt-level = 3

[profile.release.package.fundsp]
opt-level = 3

[profile.dev.package.diff]
opt-level = 3

[profile.dev.package.tracing]
opt-level = 3

[profile.dev.package.tracing-core]
opt-level = 3

[profile.dev.package.tracing-log]
opt-level = 3

[profile.dev.package.tracing-error]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev-miri]
inherits = "dev"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
