[package]
name = "voicemeeter-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FFI bindings to Voicemeeter SDK"

[dependencies]
libc = "0.2"
winreg = "0.10"
thiserror = "1.0.30"
libloading = "0.7.3"

[dev-dependencies]
bindgen = { version = "0.59.2" }

[patch.crates-io]
bindgen = {git = "https://github.com/Emilgardis/rust-bindgen", branch = "dynamic-comments"}