[package]
name = "sync-a1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
scopeguard = "1.2.0"
windows = { version = "0.51.1", features = ["Win32_Media_Audio_Endpoints", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "implement"] }
voicemeeter = {workspace = true, features = ["interface"] }
ctrlc = "3.4.1"
